maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:12: error: not found: value baggleWidth
        baggleWidth=i;
        ^